--- a/SolickManagerV3_4/App.xaml
+++ b/SolickManagerV3_4/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SolickManagerV3_4"
-             StartupUri="Windows/AuthorizationWindow.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
